<resources>
    <!-- Interface Text -->
    <string name="app_name">Step with Friends</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_walk">Walk</string>
    <string name="bottom_nav_settings">Settings</string>
    <string name="bottom_nav_leaderboard">Leaderboard</string>
    <string name="login_login_button">Login</string>
    <string name="login_register_button">Register</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="logout_confirmation">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Error Messages -->
    <string name="login_username_required">Username is required</string>
    <string name="login_password_required">Password is required</string>
    <string name="login_invalid_field">Username or Password is not valid</string>
    <string name="login_error_other">Login is currently unavailable</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_info">Info</string>
    <string name="title_activity_info_popup">InfoPopup</string>

    <!-- Google Map API Key -->
    <string name="google_maps_API_key">AIzaSyA-P_czspGO2Dy0i3SMYtKLAoc0iFkVF8E</string>
</resources>
